# password-manager

./: -files --others --exclude-standard  .clangd  .gitignore  CMakeLists.txt  README.md  autosave.txt  dockerfile  kod.txt  password_manager_test  repomix-output.xml  rjl.txt
.cache/clangd/index/: Assertion.h.D43E7CAA6557943D.idx  Backup.cpp.037C287FA3298889.idx  Backup.h.0D912E8FE1FCEF4A.idx  Column.cpp.902F41D199242969.idx  Column.h.8B08EE761686515D.idx  Database.cpp.7B046946D8ABF39C.idx  Database.h.7C4F362F269E0C7C.idx  Exception.cpp.3A20E16451AF59C0.idx  Exception.h.3C459375F85C64D7.idx  SQLiteCppExport.h.96B2509A0119F5C4.idx  Savepoint.cpp.E057510D19962064.idx  Savepoint.h.ABB14C305EEDE339.idx  Statement.cpp.6DA871CCA6377985.idx  Statement.h.6D941585621419DD.idx  Transaction.cpp.9EED6F0FA913EBB9.idx  Transaction.h.189608E9E45E72D1.idx  Utils.h.75C0864FFE8B4CB9.idx  app.cpp.6A07DB297BE130AF.idx  database_manager.cpp.156BCEAE20DC7B5B.idx  database_manager.hpp.0D58FB26EA73A811.idx  entry.cpp.44D466AF441BB8C7.idx  entry.hpp.AC028B8D53CC46CB.idx  note_entry.cpp.E520B1A319157C9F.idx  note_entry.hpp.F8F1E0ED773A2F4A.idx  password_entry.cpp.2320158CCEBA7C95.idx  password_entry.hpp.A243B3C5F896BFFA.idx  serializer.cpp.52DCC8BBF42965D1.idx  serializer.hpp.0ACD2E453B81E94A.idx  sqlite3.c.D703CBD9CF5E0F5E.idx  sqlite3.h.4C63D5FA006A2E43.idx  vault.cpp.42C6543098DF4F69.idx  vault.hpp.DBE357757C2AC2AB.idx
.github/workflows/: build.yml
include/: CreditCardEntry.hpp  PasswordEntry.hpp  Secret.hpp  addNoteDialog.hpp  addPasswordDialog.hpp  database_manager.hpp  editNoteDialog.hpp  entry.hpp  mainwindow.hpp  note_entry.hpp  password_entry.hpp  serializer.hpp  vault.hpp
src/: CreditCardEntry.cpp  PasswordEntry.cpp  addNoteDialog.cpp  addPasswordDialog.cpp  app.cpp  database_manager.cpp  editNoteDialog.cpp  entry.cpp  main.cpp  main_qt.cpp  mainwindow.cpp  note_entry.cpp  password_entry.cpp  serializer.cpp  vault.cpp
tests/: main.cpp  test_database.cpp  test_serialize.cpp
